--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,14 +18,15 @@ jobs:
         distribution: 'zulu'
         java-version: '11'
     
-    - name: Make gradlew executable
-      run: chmod +x ./gradlew
-      
     - name: Spotless check
-      run: ./gradlew spotlessCheck
+      uses: gradle/gradle-build-action@v2
+      with:
+        arguments: spotlessCheck
     
     - name: Build debug APK
-      run: ./gradlew assembleDebug --warning-mode all --stacktrace
+      uses: gradle/gradle-build-action@v2
+      with: 
+        arguments: assembleDebug --warning-mode all --stacktrace
     
     - name: Upload APK
       uses: actions/upload-artifact@v2
