--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,9 @@ jobs:
         distribution: 'zulu'
         java-version: '11'
     
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
+    
     - name: Spotless check
       uses: gradle/gradle-build-action@v2
       with:
