--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,11 @@ name: Build CI
 on:
   push:
     branches: [ master ]
+    paths-ignore: [ '**.md', '**.MD' ]
+
   pull_request:
     branches: [ master ]
+    paths-ignore: [ '**.md', '**.MD' ]
 
 jobs:
   build:
