--- a/feature-main/src/main/AndroidManifest.xml
+++ b/feature-main/src/main/AndroidManifest.xml
@@ -1,18 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.hoc.flowmvi.ui.main">
-
-  <application>
-
-    <activity
-      android:name=".MainActivity"
-      android:exported="true">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
-    </activity>
-
-  </application>
-</manifest>
+<manifest package="com.hoc.flowmvi.ui.main" />
