--- a/feature-add/src/main/AndroidManifest.xml
+++ b/feature-add/src/main/AndroidManifest.xml
@@ -1,13 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.hoc.flowmvi.ui.add">
-
-  <application>
-
-    <activity
-      android:name=".AddActivity"
-      android:label="Add user" />
-
-  </application>
-
-</manifest>
+<manifest package="com.hoc.flowmvi.ui.add" />
